<resources>
    <string name="app_name">Доктор МОБ</string>
    <string name="desc_burg_menu">Дополнительное меню</string>
    <string name="dr_mob_logo">Dr. Mob logo</string>
    <string name="lorem">Where does it come from?\nContrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance.</string>
    <string name="bonuses">" бонусов"</string>
    <string name="enter">Войдите</string>
    <string name="your_name">Ваше имя</string>
    <string name="your_phone">Номер телефона</string>
    <string name="button_enter">ВОЙТИ</string>
    <string name="username">userName</string>
    <string name="userphone">userPhone</string>
    <string name="logo_dr_mob">Логотип доктор Моб</string>
    <string name="lets_enter">Войдите</string>
    <string name="mismatch_403">Пользователь найден но имя и телефон не совпадают.</string>
    <string name="welcome_200">С возвращением!</string>
    <string name="welcome_201">Добро пожаловать!</string>
    <string name="response_403">403: Не верная авторизация.</string>
    <string name="response_204">204: Нет данных!</string>
    <string name="welcome_206">Уведомления отключены!</string>
    <string name="bad_400">Отсутствуют данные!</string>
    <string name="hi_str">Здравствуйте,</string>
    <string name="discount_text">Ваша персональная скидка:</string>
    <string name="permission_label">Доступ к местоположению поможет нам найти салоны по близости.</string>
    <string name="service_centers_txt">Сервисные центры:</string>
    <string name="make_call_text">Необходимо разрешение для совершения звонков</string>
    <string name="orders_history_text">История заказов:</string>
    <string name="back_text">вернуться</string>
    <string name="logo_text">Логотип</string>
    <string name="write_master_text">Написать мастеру</string>
    <string name="choose_center_text">Выберете центр:</string>
    <string name="on_map_text">На карте</string>
    <string name="message_text">Сообщение</string>
</resources>