<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintOrders"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.OrdersActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_collapseMode="parallax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_text" />

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:backgroundTint="@color/transparent"
            app:srcCompat="@drawable/arrow_back_36"
            android:contentDescription="@string/back_text" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textViewOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orders_history_text"
        android:textAlignment="center"
        android:textColor="@color/main_dark"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/toolbarOrders" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewOrders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewOrders">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>